crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__error_selecting_non_publishable.snap
---
source: crates/shipper-plan/src/lib.rs
assertion_line: 1192
expression: "format!(\"{err:#}\")"
---
selected package not found or not publishable: c
