crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__error_unknown_package.snap
---
source: crates/shipper-core/src/plan/mod.rs
expression: "format!(\"{err:#}\")"
---
selected package not found or not publishable: does-not-exist
