crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__linear_chain_plan.snap
---
source: crates/shipper-core/src/plan/mod.rs
expression: snapshot_of(&ws)
---
packages:
  - name: chain-d
    version: 0.1.0
  - name: chain-c
    version: 0.1.0
  - name: chain-b
    version: 0.1.0
  - name: chain-a
    version: 0.1.0
dependencies:
  chain-a:
    - chain-b
  chain-b:
    - chain-c
  chain-c:
    - chain-d
  chain-d: []
skipped: []
registry_name: crates-io
